--- a/index.html
+++ b/index.html
@@ -7,5 +7,36 @@
     <title>Twitter</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Cabeçalho -->
+    <header id="main-header">
+      <div class="content">
+        <!-- Menu -->
+        <nav>
+          <ul>
+            <li>
+              <img src="images/home.svg" alt="Home" />
+              Home
+            </li>
+            <li>
+              <img src="images/notification.svg" alt="Notification" />
+              Notifications
+            </li>
+            <li>
+              <img src="images/message.svg" alt="Message" />
+              Messages
+            </li>
+          </ul>
+        </nav>
+        <!-- Logo -->
+        <img src="images/logo.svg" alt="Logo Twitter" />
+        <!-- Side -->
+        <div class="side">
+          <input type="text" placeholder="Search on Twitter" />
+          <img src="images/avatar.png" alt="" />
+          <button>Tweet</button>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
