--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
         </div>
       </div>
     </header>
+
+    <!-- Banner -->
+    <div class="banner">
+      <h1>Twitter da Vitoria</h1>
+    </div>
   </body>
 </html>
