--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Side -->
         <div class="side">
           <input type="text" placeholder="Search on Twitter" />
-          <img src="images/avatar.png" alt="" />
+          <img src="images/avatar.png" alt="Vitoria Gonçalves" />
           <button>Tweet</button>
         </div>
       </div>
@@ -79,6 +79,75 @@
           <img src="/images/more.svg" alt="More" />
         </div>
       </div>
+    </div>
+
+    <!-- Conteudo -->
+    <div class="wrapper-content content">
+      <!-- Profile -->
+      <aside class="profile">
+        <img src="/images/avatar.png" alt="Vitoria Gonçalves" class="avatar" />
+        <h1>Vitoria Gonçalves</h1>
+        <span>@vigoncalvess</span>
+        <p>Uma escritora aleatória de arquivos .js</p>
+        <ul class="list">
+          <li>
+            <img src="/images/place.svg" alt="Place" />
+            São Paulo, Brazil
+          </li>
+          <li>
+            <img src="/images/url.svg" alt="URL" />
+            port.vitoriagoncalves.com.br
+          </li>
+          <li>
+            <img src="/images/joined.svg" alt="Joined" />
+            Joined June 2019
+          </li>
+          <li>
+            <img src="/images/born.svg" alt="Born" />
+            Born the 14th of May 2001
+          </li>
+        </ul>
+
+        <div class="widget followers">
+          <strong>
+            <img src="/images/followers.svg" alt="Followers" />
+            73 followers that you know
+          </strong>
+
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+
+        <div class="widget images">
+          <strong>
+            <img src="/images/images.svg" alt="Images" />
+            266 Photos and videos
+          </strong>
+
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </aside>
+      <!-- Timeline -->
+      <section class="timeline"></section>
+      <!-- Widgets -->
+      <aside class="widgets"></aside>
     </div>
   </body>
 </html>
