--- a/index.html
+++ b/index.html
@@ -147,7 +147,48 @@
       <!-- Timeline -->
       <section class="timeline"></section>
       <!-- Widgets -->
-      <aside class="widgets"></aside>
+      <aside class="widgets">
+        <div class="widget follow">
+          <div class="title">
+            <strong>Who to follow</strong>
+            <a href="">Refresh</a>
+            <a href="">View all</a>
+          </div>
+
+          <ul>
+            <li>
+              <div class="profile">
+                <img src="/images/avatar2.png" alt="Avatar" />
+                <div class="info">
+                  <strong>Ana Carolina <span>@quirol</span></strong>
+                  <button>Follow</button>
+                </div>
+              </div>
+              <a href="">x</a>
+            </li>
+            <li>
+              <div class="profile">
+                <img src="/images/avatar2.png" alt="Avatar" />
+                <div class="info">
+                  <strong>Analira <span>@scalabrini</span></strong>
+                  <button>Follow</button>
+                </div>
+              </div>
+              <a href="">x</a>
+            </li>
+            <li>
+              <div class="profile">
+                <img src="/images/avatar2.png" alt="Avatar" />
+                <div class="info">
+                  <strong>Larissa <span>@froliv</span></strong>
+                  <button>Follow</button>
+                </div>
+              </div>
+              <a href="">x</a>
+            </li>
+          </ul>
+        </div>
+      </aside>
     </div>
   </body>
 </html>
