--- a/index.html
+++ b/index.html
@@ -145,7 +145,415 @@
         </div>
       </aside>
       <!-- Timeline -->
-      <section class="timeline"></section>
+      <section class="timeline">
+        <nav>
+          <a href="">Tweets</a>
+          <a href="">Tweets and replies</a>
+          <a href="">Medias</a>
+        </nav>
+
+        <ul class="tweets">
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <img src="/images/avatar2.png" alt="Avatar" />
+            <div class="info">
+              <strong>Meguen Gonçalves<span>@meguenb</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" />
+                  3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" />
+                  4
+                </a>
+                <a href="">
+                  <img src="/images/like.svg" alt="Like" />
+                  5
+                </a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
       <!-- Widgets -->
       <aside class="widgets">
         <div class="widget follow">
